2025 and 21 19