@@ -6,6 +6,8 @@
   :dependencies [[org.clojure/clojure "1.11.1"]
                  [clojure-term-colors "0.1.0"]
                  [org.clojure/data.priority-map "1.2.0"]
-                 [criterium "0.4.6"]]
+                 [criterium "0.4.6"]
+                 [com.clojure-goes-fast/clj-async-profiler "1.5.1"]]
   :repl-options {:init-ns advent-2023.core}
-  :jvm-opts ["-Xss4m"])
+  :jvm-opts ["-Xss4m"
+             "-Djdk.attach.allowAttachSelf"])
